[package]
name = "lightgbm"
version = "0.2.3"
authors = ["vaaaaanquish <6syun9@gmail.com>"]
license = "MIT"
repository = "https://github.com/vaaaaanquish/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm-sys = { path = "lightgbm-sys", version = "0.3.0" }
libc = "0.2.155"
derive_builder = "0.20.0"
serde_json = "1.0.120"
polars = { version = "0.41.3", optional = true }


[features]
default = ["dataframe"]
dataframe = ["polars"]
